Fix navbar clipping bug

--- a/www/src/js/views/AppShell.scss
+++ b/www/src/js/views/AppShell.scss
@@ -1,7 +1,7 @@
 @import '~styles/utils/modules-entry.scss';
 
 $vert-padding: 0.5rem;
-$logo-vert-padding: 0.85rem;
+$logo-vert-padding: 0.875rem;
 
 .navbar {
   position: fixed;
